Update window resize event handling

--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
-body {
-  width: 100%;
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  /* background: rgb(254,254,254);
-  background: linear-gradient(125deg, rgba(254,254,254,1) 0%, rgba(161,161,161,1) 100%); */
+*
+{
+    margin: 0;
+    padding: 0;
 }
 
-canvas {
-  width: auto;
-  height: auto;
+html,
+body
+{
+    overflow: hidden;
+}
+
+.webgl
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
 }
